fix overflow issue wiv content div on hero section

--- a/src/styling/sections/hero/_hero.scss
+++ b/src/styling/sections/hero/_hero.scss
@@ -15,6 +15,7 @@
 		z-index: 999;
 		overflow: hidden;
 		min-width: max-content;
+		height: max-content;
 
 		h1 {
 			font-size: 3.5rem;
